<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.auth.registration.RegistrationFragment">

    <ProgressBar
        android:id="@+id/progress_circular"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:text="@string/registration_title"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toTopOf="@id/email_label"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            android:labelFor="@id/email_input"
            android:text="@string/email_title" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/email_label"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/firstname_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/email_input"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/firstname_title" />

        <EditText
            android:id="@+id/firstname_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/firstname_label"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/firstname_hint"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/lastname_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/firstname_input"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/lastname_title" />

        <EditText
            android:id="@+id/lastname_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/lastname_label"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/lastname_hint"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/pwd_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/email_input"
            app:layout_constraintTop_toBottomOf="@id/lastname_input"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/password_title" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/pwd_label"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <ImageView
            android:id="@+id/show_password"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_eye_closed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/password_input"
            app:layout_constraintBottom_toBottomOf="@id/password_input"
            app:layout_constraintTop_toTopOf="@id/password_input"/>

        <TextView
            android:id="@+id/repeat_pwd_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/password_input"
            app:layout_constraintStart_toStartOf="parent"
            android:labelFor="@id/email_input"
            android:text="@string/password_repeat_title" />

        <EditText
            android:id="@+id/repeat_password_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/repeat_pwd_label"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/password_repeat_hint"
            android:inputType="textPassword" />

        <ImageView
            android:id="@+id/show_repeat_password"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_eye_closed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/repeat_password_input"
            app:layout_constraintBottom_toBottomOf="@id/repeat_password_input"
            app:layout_constraintTop_toTopOf="@id/repeat_password_input" />

        <Button
            android:id="@+id/proceed_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/repeat_password_input"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/registration_action" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>